# rust_boilerplate

./: .gitignore  Cargo.toml  makefile  readme.md
src/: cli.rs  config.rs  main.rs
src/database/: mod.rs
src/model/response/: book.rs  mod.rs
src/server/: controller.rs  mod.rs
src/services/: book.rs
