[package]
name = "demo"
version = "0.1.1"
edition = "2021"
authors = ["Scott Dn <scott.dn91@gmail.com>"]
description = "Rust boilerplate project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.3", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
