[package]
name = "demo"
version = "0.1.1"
edition = "2021"
authors = ["Scott Dn <scott.dn91@gmail.com>"]
description = "Rust boilerplate project"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
axum = "0.6.20"
clap = { version = "4.4.3", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
